<resources>
    <string name="app_name" translatable="false">Story App</string>
    <string name="new_to_story">New to Story?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="person_with_paper_illustration">Person with paper illustration</string>
    <string name="login_title">Hello, \nLet\'s Sign In</string>
    <string name="login_message">Welcome Back, \nLet\'s Explore the Stories</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_title">Let\'s create an account</string>
    <string name="register_message">Hello There, \nWelcome Let\'s make stories together</string>
    <string name="full_name">Full name</string>
    <string name="et_email_error_message">Email address is not valid</string>
    <string name="et_password_error_message">Passwords must be at least 8 characters</string>
    <string name="registration_error_message">Registration failed, please try again.</string>
    <string name="registration_success">Registration success</string>
    <string name="login_error_message">Login failed, please try again.</string>
    <string name="login_success_message">Login success</string>
    <string name="dummy_name" translatable="false">Username</string>
    <string name="dummy_description" translatable="false">Story Description</string>
    <string name="dummy_date" translatable="false">Date</string>
    <string name="story_s_illustration">Story\'s Image</string>
    <string name="stories">Stories</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="create_story">Create story</string>
    <string name="error_occurred_message">An error occurred</string>
    <string name="story_illustration">Story Image</string>
    <string name="detail_toolbar_title">%s\'s story</string>
    <string name="no_data">No data</string>
    <string name="stories_not_found_error">Stories not found</string>
    <string name="add_story_title">Add Story</string>
    <string name="select_image">Select image from</string>
    <string name="select_from_camera">Camera</string>
    <string name="select_from_gallery">Gallery</string>
    <string name="write_a_description">Write a description</string>
    <string name="desc_empty_field_error">Please fill the description field</string>
    <string name="empty_image_error">Please select an image</string>
    <string name="image_upload_failed">Story upload failed</string>
    <string name="story_upload">Story uploaded</string>
    <string name="language_setting">Language Setting</string>
    <string name="language_english">English</string>
    <string name="language_indonesian">Indonesian</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="setting">Setting</string>
    <string name="location">Location</string>
    <string name="share_location">Share location</string>
    <string name="location_permission_denied">Location permission not allowed</string>
    <string name="location_permission_denied_action">Change Setting</string>
    <string name="retry">Retry</string>
    <string name="loading_error_message">Unable to get stories data</string>
    <string name="logout_dialog_title">Are you sure?</string>
    <string name="logout_dialog_message">You need to login again after logout</string>
    <string name="cancel">Cancel</string>
    <string name="logout_message_success">Logged out successfully</string>
    <string name="please_activate_location_message">Please activated your location services</string>
</resources>