<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_purple"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/group_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <RadioButton
            android:id="@+id/language_english"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_english"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:layout_marginStart="8dp"
            android:buttonTint="@color/purple_700" />

        <RadioButton
            android:id="@+id/language_Indonesian"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_indonesian"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:layout_marginStart="8dp"
            android:buttonTint="@color/purple_700" />
    </RadioGroup>

    <TextView
        android:id="@+id/logout"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/logout"
        app:drawableStartCompat="@drawable/ic_baseline_logout_24"
        app:drawableTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_language" />


</androidx.constraintlayout.widget.ConstraintLayout>